[tool.poetry]
packages = [
 { include = "unreasonably_long_core" },
 { include = "xontrib" }
]
name = "xontrib-uhu"
version = "0.1.0"
description = "AI-assisted command shortener"
authors = ["Your Name <you@example.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"
rich = "^13.9.3"

[tool.poetry.group.dev.dependencies]
xonsh="^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
