[tool.poetry]
packages = [
 { include = "unreasonably_long_core" },
 { include = "xontrib" }
]
name = "xontrib-uhu"
version = "0.1.3"
description = "Xonsh command shortener"
authors = ["Your Name <you@example.com>"]
license = "WTFPL"
readme = "README.md"
keywords = ["xontrib", "xonsh"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"
rich = "^13.9.3"
xonsh="^0.18.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"